# course_project

sem5/agents/compare_structures_agent/: compare_structures_agent.cpp  compare_structures_agent.hpp
sem5/check_student_answer_module/: CMakeLists.txt  check_student_answer_module.cpp  check_student_answer_module.hpp
sem5/check_student_answer_module/agent/: check_student_answer_agent.cpp  check_student_answer_agent.hpp
sem5/check_student_answer_module/keynodes/: check_student_answer_keynodes.hpp
sem5/check_student_answer_module/test/: CMakeLists.txt
sem5/check_student_answer_module/test/units/: check_student_answer_agent_test.cpp
sem5/compare_structures_module/: CMakeLists.txt  compare_structures_module.cpp  compare_structures_module.hpp
sem5/compare_structures_module/agent/: compare_structures_agent.cpp  compare_structures_agent.hpp
sem5/compare_structures_module/keynodes/: compare_structures_keynodes.hpp
sem5/compare_structures_module/test/: CMakeLists.txt
sem5/compare_structures_module/test/units/: compare_structures_agent_test.cpp
sem5/module-determine-number-of-graphs-for-task/: CMakeLists.txt  README.md  determine_number_of_graphs_for_task_module.cpp  determine_number_of_graphs_for_task_module.hpp
sem5/module-determine-number-of-graphs-for-task/agent/: sc_agent_determine_number_of_graphs_for_task.cpp  sc_agent_determine_number_of_graphs_for_task.hpp
sem5/module-determine-number-of-graphs-for-task/keynodes/: keynodes.hpp
sem5/module-determine-number-of-graphs-for-task/test/: CMakeLists.txt
sem5/module-determine-number-of-graphs-for-task/test/units/: determine_number_of_graphs_agent_test.cpp
sem5/module-generate-random-graph/: CMakeLists.txt  generate_random_graph_module.cpp  generate_random_graph_module.hpp
sem5/module-generate-random-graph/agent/: sc_agent_generate_random_graph.cpp  sc_agent_generate_random_graph.hpp
sem5/module-generate-random-graph/keynodes/: gen_random_graph_keynodes.hpp  keynodes.hpp
sem5/module-generate-random-graph/test/: CMakeLists.txt
sem5/module-generate-random-graph/test/units/: generate_random_graph_agent_test.cpp
sem5/module-generate-task-for-student/: CMakeLists.txt  generate_task_for_student_module.cpp  generate_task_for_student_module.hpp
sem5/module-generate-task-for-student/agent/: sc_agent_generate_task_for_student.cpp  sc_agent_generate_task_for_student.hpp
sem5/module-generate-task-for-student/keynodes/: gen_task_keynodes.hpp
sem5/module-generate-task-for-student/test/: CMakeLists.txt
sem5/module-generate-task-for-student/test/units/: generate_task_for_student_test.cpp
sem5/module-of-condensation-calculation/: CMakeLists.txt  README.md  condensation_calculation_module.cpp  condensation_calculation_module.hpp
sem5/module-of-condensation-calculation/agent/: sc_agent_of_condensation_calculation.cpp  sc_agent_of_condensation_calculation.hpp
sem5/module-of-condensation-calculation/keynodes/: condensation_calc_keynodes.hpp
sem5/module-of-condensation-calculation/test/: CMakeLists.txt
sem5/module-of-condensation-calculation/test/units/: example_agent_test.cpp
